fix(style): Change navbar-brand alignment

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -8,6 +8,8 @@
     }
 
     .navbar-brand {
+        align-self: end;
+
         .bi {
             width: 24px;
             height: 24px;
